cmake_minimum_required(VERSION 3.8)
project(online_judge)

set(CMAKE_CXX_STANDARD 11)

add_executable(AL_12_03 AL_12_03.cpp)
add_executable(KOTYYYYY KOTYYYYY.cpp)
add_executable(XIWTPZA XIWTPZA.cpp)
add_executable(KRZ KRZ.cpp)
add_executable(BSHEEP BSHEEP.cpp)
add_executable(MWPZ2014_L_PUNKTY_BLISKIE MWPZ2014_L_PUNKTY_BLISKIE.cpp)
add_executable(FACTORIZ FACTORIZ.cpp)
add_executable(FACT0 FACT0.cpp)
add_executable(KAMELNEO KAMELNEO.cpp)
add_executable(TETRAHRD TETRAHRD.cpp)
add_executable(756_BIORHYTHMS 756_BIORHYTHMS.cpp)
add_executable(BALANCE BALANCE.cpp)
add_executable(152C_POCKET_BOOK 152C_POCKET_BOOK.cpp)
add_executable(FUNNUMS FUNNUMS.cpp)
add_executable(PARTY PARTY.cpp)
add_executable(VECTAR11 VECTAR11.cpp)
add_executable(PHONELST PHONELST.cpp)
add_executable(NHAY NHAY.cpp)
add_executable(915A_GARDEN 915A_GARDEN.cpp)
add_executable(915B_BROWSER 915B_BROWSER.cpp)
add_executable(BUGLIFE BUGLIFE.cpp)
add_executable(PT07Z PT07Z.cpp)
add_executable(MST MST.cpp)
add_executable(230C_T_PRIMES 230C_T_PRIMES.cpp)